fix layout break point coluns

--- a/css/framework.css
+++ b/css/framework.css
@@ -155,6 +155,7 @@ h3 {
 
 img {
     height: 140px;
+    margin-top: .8rem;
     margin-bottom: .8rem;
 }
 
